[package]
name = "shadow-runner"
version = "0.1.0"
edition = "2021"

[features]
debug = ["bevy_rapier2d/debug-render-2d"]

[dependencies]
bevy = "0.15"
bevy_rapier2d = "0.29"
bevy_ecs_ldtk = "0.11"
bevy_ecs_tilemap = "0.15"
bevy_asset_loader = { version = "0.22", features = ["2d"] }
bevy_light_2d = { version = "0.5" }
better_default = "1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
panic = "abort"

[profile.release-wasm]
inherits = "release"
codegen-units = 16
incremental = true
opt-level = "z"
